# bam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bamConfig.cmake.in  bamConfigVersion.cmake.in
include/: bam.h  bam.h~
include/bam/: bam.h
src/: bam.cc  bam.cc~  bam32Lookups.h
tests/: BAMTest.cc  BAMTest.cc~
tools/: lookupGen.py
